--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dfdashboard",
   "productName": "DentistFind App",
-  "version": "2.3.1",
+  "version": "2.3.0",
   "description": "Desktop app for Dentistfind",
   "author": "Dentistfind Inc.",
   "main": "public/electron.js",
@@ -18,6 +18,7 @@
       "icon": "public/icon.icns"
     }
   },
+  "repository": "https://github.com/df-application-dev/DentistFindApp-Releases",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,6 +27,7 @@
     "cross-env": "^7.0.3",
     "electron-context-menu": "^3.6.1",
     "electron-is-dev": "^1.2.0",
+    "electron-updater": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
